# open-forti-manager

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  test.yml
assets/: open-forti-manager.desktop
debian/: open-forti-manager.sudoers  postinst  postrm
src/: app.rs  config.rs  lib.rs  main.rs  tray.rs  vpn.rs
src/engine/: auth.rs  backend.rs  gateway.rs  hdlc.rs  http_server.rs  mod.rs  ppp.rs  pppstate.rs  routes.rs  tun.rs  tunnel.rs
src/ui/: certs.rs  connection.rs  helpers.rs  mod.rs  profiles.rs  settings.rs
