[package]
name = "open-forti-manager"
version = "1.0.7"
edition = "2024"
description = "Native Fortinet SSL-VPN client for Linux with a GTK4 GUI — pure-Rust TLS, SAML, and PPP/IPCP engine (no openfortivpn or pppd), system tray, and profile management"
license = "MIT"
repository = "https://github.com/kowalk/open-forti-manager"
readme = "README.md"

[dependencies]
gtk4 = "0.8"
libadwaita = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ksni = "0.3"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2"
webpki-roots = "0.26"
sha2 = "0.10"
libc = "0.2"

[package.metadata.deb]
maintainer = "OpenForti Manager contributors"
depends = "libgtk-4-1, libadwaita-1-0, libayatana-appindicator3-1, libcap2-bin, pkexec | polkit"
section = "net"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    ["target/release/open-forti-manager", "usr/bin/open-forti-manager", "755"],
    ["assets/open-forti-manager.desktop", "usr/share/applications/open-forti-manager.desktop", "644"],
    # Staged sudoers rule; postinst validates it with visudo before installing
    # it into /etc/sudoers.d/ (never shipped there directly, to avoid a bad
    # file breaking sudo system-wide).
    ["debian/open-forti-manager.sudoers", "usr/share/open-forti-manager/open-forti-manager.sudoers", "440"],
]
